Sat Aug  4 20:42:32 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: bug fix on output="text" from Nicolas Marsgui

Fri Aug  3 14:23:25 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* tests/general/bug-21-.out tests/general/bug-31-.out:
	  this got fixed by libxml patches
	* win32/readme.msvc win32/dsp/* xsltproc/xsltproc.c
	  Makefile.am libexslt/exslt.[ch] libexslt/exsltconfig.h.in
	  libexslt/functions.c libexslt/math.c libxslt/win32config.h
	  libxslt/xsltconfig.h.in libxslt/xsltutils.h
	  libxslt/xsltwin32config.h libxslt/xsltwin32config.h.in:
	  Applied Igor  Zlatkovic Win32 Facelift No.2 patch, and fixed
	  a few things related to those changes.

Wed Aug  1 13:58:21 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: well one need one \n after DOCTYPE
	* test//*/*.out: the output of some tests changed, looks better
	  actually

Wed Aug  1 13:21:18 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: avoid extra \n when serializing top
	  text nodes.

Wed Aug  1 10:37:50 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.c: one more revision on Norm's localTime() function

Wed Aug  1 01:37:41 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/sets.c: fixed bugs in exsltTrailingFunction and
	  exsltLeadingFunction when passing an empty node-set as the
	  second argument
	* libxslt/functions.[ch]: gave priority to context-level functions
	  over extension module functions. This allows a function declared
	  with a func:function element to override an extension module
	  function for example. This is a bit hackish...
	* tests/exslt/sets/{lead,trail}ing.1.out: fixed errors. The result
	  values didn't conform to the expected values. This is a bug in
	  the EXSLT official use cases.

Tue Jul 31 23:53:55 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* config.h.in configure.in libxslt/extra.c: tried to integrate
	  Norm's implemntation of localTime()
